fixed logo overlap issue on mobile and resized some text and links

--- a/src/LinksFolder/linkStyling.scss
+++ b/src/LinksFolder/linkStyling.scss
@@ -4,8 +4,8 @@
         width: 60px;
     }
     @media screen and (max-width: 839px) {
-        height: 60px;
-        width: 40px;
+        height: 80px;
+        width: 60px;
         transform: translateY(-20px);
         -webkit-transform: translateY(-20px);
         -moz-transform: translateY(-20px);
@@ -16,6 +16,7 @@
     width: 80px;
     background-color: white;
     margin: 0;
+    z-index: 400;
 
     transform: translateX(-20px);
     -webkit-transform: translateX(-20px);
@@ -39,7 +40,7 @@
             padding-right: 4px;
         }
         @media screen and (max-width: 839px) {
-            padding: 20px 7px 0 7px;
+            padding: 20px 15px 0 10px;
         }
     }
 }
